deploy/kubernetes/app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-manager
    component: app
  name: prod-manager
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app: prod-manager
      component: app
  template:
    metadata:
      labels:
        app: prod-manager
        component: app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - image: registry.gitlab.com/prod-manager/prod-manager:latest
        imagePullPolicy: Always
        name: app
        securityContext:
          allowPrivilegeEscalation: False
          capabilities:
            drop:
            - NET_RAW
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100M
          limits:
            cpu: 500m
            memory: 150M
        livenessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: http
          periodSeconds: 5
        startupProbe:
          httpGet:
            path: /health
            port: http
          failureThreshold: 15
          periodSeconds: 1
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
          readOnly: true
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Paris
            type: File
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: prod-manager
                  component: app
              topologyKey: topology.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                  app: prod-manager
                  component: app
            topologyKey: kubernetes.io/hostname
