deploy/kubernetes/database-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-manager
    component: database
  name: prod-manager-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-manager
      component: database
  template:
    metadata:
      labels:
        app: prod-manager
        component: database
    spec:
      containers:
      - image: postgres
        name: database
        resources:
          requests:
            cpu: 250m
            memory: 20M
          limits:
            cpu: 500m
            memory: 200M
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prod-manager-database
