deploy/kubernetes/proxy-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-manager
    component: proxy
  name: prod-manager-proxy
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app: prod-manager
      component: proxy
  template:
    metadata:
      labels:
        app: prod-manager
        component: proxy
    spec:
      containers:
      - image: nginx:latest
        name: proxy
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        resources:
          requests:
            cpu: 10m
            memory: 10M
          limits:
            cpu: 100m
            memory: 50M
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        startupProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
        - name: static-files
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
        - name: nginx-config
          configMap:
            name: prod-manager-proxy
        - name: static-files
          emptyDir: {}
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Paris
            type: File
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: prod-manager
                  component: proxy
              topologyKey: topology.kubernetes.io/zone
            weight: 50
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                  app: prod-manager
                  component: proxy
            topologyKey: kubernetes.io/hostname
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: prod-manager
                  component: app
              topologyKey: kubernetes.io/hostname
            weight: 100
