deploy/kubernetes/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-manager
    component: app
  name: prod-manager
spec:
  type: ClusterIP
  selector:
    app: prod-manager
    component: app
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8080
