deploy/kubernetes/database-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-manager
    component: database
  name: prod-manager-database
spec:
  type: ClusterIP
  selector:
    app: prod-manager
    component: database
  ports:
  - name: psql
    port: 5432
    protocol: TCP
    targetPort: 5432
