deploy/kubernetes/proxy-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-manager
    component: proxy
  name: prod-manager-proxy
spec:
  type: ClusterIP
  selector:
    app: prod-manager
    component: proxy
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
