deploy/kubernetes/redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-manager
    component: redis
  name: prod-manager-redis
spec:
  type: ClusterIP
  selector:
    app: prod-manager
    component: redis
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
