deploy/kubernetes/proxy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: prod-manager
    component: proxy
  name: prod-manager-proxy
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: prod-manager.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  prod-manager-proxy
            port:
              name: http
